--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,38 +9,46 @@
 
   html{
     font-family: 'Poppins',sans-serif;
+    
   }
 
 .converter-div{
   width:100%;
   padding:10px;
-  background-color: grey;
-  color:white;
+  background-color: antiquewhite;
+  color:black;
+  justify-content: center;
+  align-items: center;
 }
 
 input{
   padding:5px 15px;
-  background-color: aqua;
+  background-color: lightyellow;
   border: none;
   border-radius: 5px;
   outline:none;
   margin-right:10px;
+  justify-content: center;
+  align-items: center;
  
 }
 
 button {
   padding:5px 15px ;
   margin-left: 10px;
-  background-color: lightgreen;
+  background-color: gold;
   border: none;
   border-radius:5px;
   transition:0.5s;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
+ 
   
 }
 
 button:hover{
-  background-color:lightblue ;
+  background-color:goldenrod ;
  
 }
 
