--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@
     float: left;
     width: auto;
     height: auto;
-    padding-left: 3rem;
+    padding-left: 1rem;
 }
 
 .nav div.logo a {
@@ -26,7 +26,7 @@
 }
 
 .nav div.logo a:hover {
-    color: #00E676;
+    color: #6527BE;
 }
 
 .nav div.main_list {
@@ -58,7 +58,10 @@
 }
 
 .nav div.main_list ul li a:hover {
-    color: #00E676;
+    background-color: #6527BE;
+    border-radius: 20px;
+    border-width: 20cap;
+ 
 }
 
 
@@ -111,12 +114,11 @@
     .nav div.main_list ul {
         flex-direction: column;
         width: 100%;
-        height: 100vh;
+        height:100%;
         right: 0;
         left: 0;
         bottom: 0;
-        background-color: #111;
-        /*same background color of navbar*/
+        background: linear-gradient(45deg, #9681EB 0%, #6527BE 100%);
         background-position: center top;
     }
     .nav div.main_list ul li {
@@ -328,31 +330,14 @@
     background-color: #111;
 }
 
-
-
-
-
-
-.myH2 {
-	text-align:center;
-	font-size: 4rem;
-}
-.myP {
-	text-align: justify;
-	padding-left:15%;
-	padding-right:15%;
-	font-size: 20px;
-}
 @media all and (max-width:700px){
-	.myP {
-		padding:2%;
-	}
+
 }
 
 /*start of converter-div*/
 
   * {
-    padding: 10;
+    padding: 20;
     margin: 0;
     box-sizing: border-box;
   }
@@ -370,6 +355,8 @@
     color: white;
     justify-content: center;
     align-items: center;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   input {
@@ -380,7 +367,7 @@
     outline: none;
     margin-right: 10px;
     justify-content: center;
-    align-items: center;
+ 
 
   }
 
